fix: gap between text and button in cookies element

--- a/defaults.css
+++ b/defaults.css
@@ -404,6 +404,7 @@ progress::-webkit-progress-value {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 1rem;
   width: calc(100% - 2rem);
   max-width: 600px;
   height: auto;
